package com.sysc3303.commons;

/**
 * A simple enum denoting which directon an elevator is travelling in.
 * @author Joshua Fryer
 *
 */
public enum Direction {
	UP, DOWN, IDLE
}
